Prevented wrapping of team name, payment status and start/end dates.

--- a/src/routes/WorkPeriods/components/PaymentStatus/styles.module.scss
+++ b/src/routes/WorkPeriods/components/PaymentStatus/styles.module.scss
@@ -7,6 +7,7 @@
   font-size: 12px;
   line-height: 16px;
   letter-spacing: 0.5px;
+  white-space: nowrap;
   border-radius: 5px;
   background: #aaa;
   color: #fff;
